--- a/.htaccess
+++ b/.htaccess
@@ -7,4 +7,5 @@ RewriteRule ^$ index.php?/ [QSA,L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule (.*) index.php?/$1 [QSA,L]
+#RewriteRule ^([a-zA-Z0-9-/+]+)([0-9]+)$ index.php?page=/$1&product=$2/ [L]
 </IfModule>
