--- a/.htaccess
+++ b/.htaccess
@@ -6,6 +6,7 @@ RewriteEngine On
 RewriteRule ^$ index.php?/ [QSA,L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule (.*) index.php?/$1 [QSA,L]
-#RewriteRule ^([a-zA-Z0-9-/+]+)([0-9]+)$ index.php?page=/$1&product=$2/ [L]
+RewriteRule (.*) index.php?page=$1 [QSA,L]
+#RewriteRule ^(.*)$ index.php?url=$1/product=$2/productId=$3 [QSA,L]
+#RewriteRule ^([a-zA-Z0-9-/+]+)/([a-zA-Z0-9-/+]+)/([a-zA-Z0-9-/+]+)$ index.php?page=$1&product=$2&productId=$3 [QSA,L]
 </IfModule>
